--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "illuminate/events": "self.version",
         "illuminate/exception": "self.version",
         "illuminate/filesystem": "self.version",
+        "illuminate/foundation": "self.version",
         "illuminate/hashing": "self.version",
         "illuminate/http": "self.version",
         "illuminate/log": "self.version",
