--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "illuminate/foundation",
+    "name": "illuminate/foundation-test",
     "description": "Illuminate Foundation.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
