--- a/composer.json
+++ b/composer.json
@@ -38,36 +38,36 @@
         "symfony/var-dumper": "~3.3",
         "tijsverkoyen/css-to-inline-styles": "~2.2",
         "vlucas/phpdotenv": "~2.2",
-        "illuminate/auth": "dev-master",
-        "illuminate/broadcasting": "dev-master",
-        "illuminate/bus": "dev-master",
-        "illuminate/cache": "dev-master",
-        "illuminate/config": "dev-master",
-        "illuminate/console": "dev-master",
-        "illuminate/container": "dev-master",
-        "illuminate/contracts": "dev-master",
-        "illuminate/cookie": "dev-master",
-        "illuminate/database": "dev-master",
-        "illuminate/encryption": "dev-master",
-        "illuminate/events": "dev-master",
-        "illuminate/exception": "dev-master",
-        "illuminate/filesystem": "dev-master",
-        "illuminate/hashing": "dev-master",
-        "illuminate/http": "dev-master",
-        "illuminate/log": "dev-master",
-        "illuminate/mail": "dev-master",
-        "illuminate/notifications": "dev-master",
-        "illuminate/pagination": "dev-master",
-        "illuminate/pipeline": "dev-master",
-        "illuminate/queue": "dev-master",
-        "illuminate/redis": "dev-master",
-        "illuminate/routing": "dev-master",
-        "illuminate/session": "dev-master",
-        "illuminate/support": "dev-master",
-        "illuminate/translation": "dev-master",
-        "illuminate/validation": "dev-master",
-        "illuminate/view": "dev-master",
-        "tightenco/collect": "dev-master"
+        "illuminate/auth": "^5.5",
+        "illuminate/broadcasting": "^5.5",
+        "illuminate/bus": "^5.5",
+        "illuminate/cache": "^5.5",
+        "illuminate/config": "^5.5",
+        "illuminate/console": "^5.5",
+        "illuminate/container": "^5.5",
+        "illuminate/contracts": "^5.5",
+        "illuminate/cookie": "^5.5",
+        "illuminate/database": "^5.5",
+        "illuminate/encryption": "^5.5",
+        "illuminate/events": "^5.5",
+        "illuminate/exception": "^5.5",
+        "illuminate/filesystem": "^5.5",
+        "illuminate/hashing": "^5.5",
+        "illuminate/http": "^5.5",
+        "illuminate/log": "^5.5",
+        "illuminate/mail": "^5.5",
+        "illuminate/notifications": "^5.5",
+        "illuminate/pagination": "^5.5",
+        "illuminate/pipeline": "^5.5",
+        "illuminate/queue": "^5.5",^
+        "illuminate/redis": "^5.5",
+        "illuminate/routing": "^5.5",
+        "illuminate/session": "^5.5",
+        "illuminate/support": "^5.5",
+        "illuminate/translation": "^5.5",
+        "illuminate/validation": "^5.5",
+        "illuminate/view": "^5.5",
+        "tightenco/collect": "^5.5"
 
     },
     "require-dev": {
