--- a/composer.json
+++ b/composer.json
@@ -116,6 +116,7 @@
         "guzzlehttp/guzzle": "Required to use the Mailgun and Mandrill mail drivers and the ping methods on schedules (~6.0).",
         "laravel/tinker": "Required to use the tinker console command (~1.0).",
         "league/flysystem-aws-s3-v3": "Required to use the Flysystem S3 driver (~1.0).",
+        "league/flysystem-cached-adapter": "Required to use the Flysystem cache (~1.0).",
         "league/flysystem-rackspace": "Required to use the Flysystem Rackspace driver (~1.0).",
         "league/flysystem-cached-adapter": "Required to use Flysystem caching (~1.0).",
         "league/flysystem-sftp": "Required to use the Flysystem SFTP driver (~1.0).",
