--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,7 @@
         "aws/aws-sdk-php": "~3.0",
         "doctrine/dbal": "~2.6",
         "filp/whoops": "^2.1.4",
+        "league/flysystem-cached-adapter": "~1.0",
         "mockery/mockery": "~1.0",
         "moontoast/math": "^1.1",
         "orchestra/testbench-core": "3.6.*",
